[D4CRIS-1068] css theme updated - layout bug fix

--- a/dspace-jspui/src/main/webapp/static/css/bootstrap/dspace-theme.css
+++ b/dspace-jspui/src/main/webapp/static/css/bootstrap/dspace-theme.css
@@ -296,7 +296,8 @@ footer .container {
 
 .form-control{
 	color:#000;
-	height: auto !important;
+	height: auto;
+	width: auto !important;
 }
 
 .modal.in .modal-dialog {
